--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 			.data(pixels)
 			.enter().append("rect")
 				.attr("class",'pixel')
-				.style("fill",function(d){return d.c;})
+				.style("fill",'#ffffff')
 				.attr("x",function(d){return d.x})
 				.attr("y",function(d){return d.y})
 				.attr("height",function(d){
