--- a/index.html
+++ b/index.html
@@ -1,93 +1,40 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>
-	<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
-	<script src="points.js"></script>
-	<style type="text/css">
-		.container{
-			display:block;
-		}
-		#primavera{
-			position:absolute;
-			color:white;
-			top:274px;
-			left:5px;
-			font-size:60px;
-			font-family:'PT Sans',sans-serif;
-			z-index:1000;
-			width:512px;
-			text-align:center;
-			line-height:64px;
-			text-shadow:1px 1px 1px #000;
-			opacity:0;
-		}
-		.show{
-			transition: all .25s ease-in-out;
-			opacity:1!important;
-		}
-	</style>
+<title>Primavera</title>
 </head>
-<body>
-<div class="container"></div>
-<div id="primavera">Primavera<br/>H2020 project</div>
-<script type="text/javascript">
-	var width = 512,
-		height = 512,
-		border = 0,
-		context = [];
-	var objectContainer = d3.select(".container");
-	var svg = objectContainer.append("svg")
-		.attr("height", height)
-		.attr("width", width);
-	function draw(pixels,id){
-		var pixelGroup = svg.append("g").attr("id","pixels"+id);
-		pixels = pixelGroup.selectAll(".pixel")
-			.data(pixels)
-			.enter().append("rect")
-				.attr("class",'pixel')
-				.style("fill",'#ffffff')
-				.attr("x",function(d){return d.x})
-				.attr("y",function(d){return d.y})
-				.attr("height",function(d){
-					return d.h;
-				})
-				.attr("width",function(d){
-					return d.w;
-				});
-	}
-	function drawAnim(pixels,id,delay,center){
-		var pixelGroup = svg.append("g").attr("id","pixels"+id);
-		pixels = pixelGroup.selectAll(".pixel")
-			.data(pixels)
-			.enter().append("rect")
-				.attr("class",'pixel')
-				.style("fill",function(d){return d.c;})
-				.attr("x",function(d){return d.x+d.w/2})
-				.attr("y",function(d){return d.y+d.h/2})
-				.attr("height",0)
-				.attr("width",0);
-		pixels.transition()
-				.delay(function(d){return delay+delay*(Math.sqrt((d.x-center.x)*(d.x-center.x)+(d.y-center.y)*(d.y-center.y)))/width;})
-				.attr("x",function(d){return d.x})
-				.attr("y",function(d){return d.y})
-				.attr("height",function(d){return d.h;})
-				.attr("width",function(d){return d.w;})
-			.duration(250);
-	}
-	window.onload = function(){
-		var delay = 500;
-		var center = {x:1.5*width/4,y:0.4*height/2};
-		for(var i=0;i<pixels.length;i++){
-			if(i==0){
-				draw(pixels[i],i);
-			}else{
-				drawAnim(pixels[i],i,delay+(i-1)*delay,center);
+<body onload="init()">
+	<canvas id="canvas"></canvas>
+	<img id="img" src="earth-png-24.png" style="display:none"/>
+	<script type="text/javascript">
+		function pixelate(element,ctx,value){
+			var imgWidth = element.width;
+			var imgHeight = element.height;
+			var width = imgWidth*value;
+			var height = imgHeight*value;
+			ctx.drawImage(element,0,0,width,height);
+			ctx.drawImage(canvas,0,0,width,height,0,0,imgWidth,imgHeight);
+		};
+		var pixel = 0.02, step = 1000/10;	
+		function init(){
+			var canvas = document.getElementById("canvas");		
+			var image = document.getElementById("img");
+			canvas.width = image.width-2;
+			canvas.height = image.height-2;
+			var ctx = canvas.getContext('2d');
+			ctx.mozImageSmoothingEnabled = false;
+			ctx.webkitImageSmoothingEnabled = false;
+			ctx.imageSmoothingEnabled = false;			
+			function next(){
+				pixelate(image,ctx,pixel);
+				pixel = pixel*1.15;
+				if(pixel<0.5){
+					window.setTimeout(next,step);
+				}
 			}
+			next();
 		}
-		setTimeout(function(){
-			document.getElementById('primavera').classList.add('show');
-		},delay*(2+pixels.length));
-	}
-</script>
+	</script>
 </body>
 </html>
+
